--- a/css/Informacion de AdopcionesStyle.css
+++ b/css/Informacion de AdopcionesStyle.css
@@ -69,17 +69,60 @@ img.ImagenPerroGris{
     object-fit: cover;
 }
 
-footer section{
-    float:right;
+/*------------footer----------*/
+
+.footer{
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    padding-top: 0px;
+    font-size: 20px;
+    background: #5496FF;
 }
-footer p{
-    margin:0;
+.footer h2{
+    color: #fff;
 }
-footer a{
-    transition: color 0.3s ease;
-    padding:5px;
-    background-color: #000000;
-    color: #FFFFFF;
-    text-decoration: none;
+.fot{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.fot1{
+    position: relative;
+    max-width: 700px;
+    min-width: 450px;
+}
+.fot1{
+    margin-bottom: 60px;
+}
+.fot1 .fott{
+    position: absolute;
+    bottom: 0;
+    background: #000000;
+    width: 70%;
+    padding: 40px 0px;
+}
+
+.fot2 img{
+    width: 338px;
+    height: 211px;
+    margin: 0px 40px;
+}
+
+.fot2{
+    flex-basis: 5%;
+    padding: 50px 0px ;
+}
+
+
+.fot3 {
+    margin: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.fot3 .fa-brands{
+    margin: 0px 40px;
+    padding: 25px 0;
 }
 
